tests/flat_file/ui/stable/auto_plugin_app_not_mutable.stderr
error: auto_plugin - the function: plugin param: _app is not mutable
 --> tests/flat_file/ui/stable/auto_plugin_app_not_mutable.rs:4:11
  |
4 | fn plugin(_app: &bevy_app::App) {}
  |           ^^^^
